made the nav header fixed on mobile and also made the amount to be in 2 decimal place to account for decimals

--- a/src/component/generate_invoice/generate-invoice.scss
+++ b/src/component/generate_invoice/generate-invoice.scss
@@ -19,7 +19,7 @@
     border: none;
     width: 170px;
     height: 32px;
-    margin-top: 7%;
+    margin-top: 13%;
     margin-bottom: 5%;
 }
 
@@ -216,6 +216,7 @@ input:focus {
         font-size: 12px;
         width: 130px;
         height: 39px;
+        margin-top: 25%;
     }
 
     .heading-text-gi {
