--- a/src/component/header/header.scss
+++ b/src/component/header/header.scss
@@ -3,6 +3,11 @@
     height: 9vh;
     display: flex;
     align-items: center;
+    position: fixed;
+    width: 100%;
+    z-index: 600;
+    border: 1px solid #fff;
+    box-shadow: 0 5px 20px rgba(0,0,0,.1292);
 }
 
 .header-inner-div {
