--- a/src/component/requests/requests.scss
+++ b/src/component/requests/requests.scss
@@ -6,7 +6,7 @@
     border: none;
     width: 170px;
     height: 32px;
-    margin-top: 7%;
+    margin-top: 13%;
     margin-bottom: 3%;
 }
 
@@ -217,7 +217,7 @@
         font-size: 12px;
         width: 130px;
         height: 39px;
-        margin-top: 10%;
+        margin-top: 25%;
         margin-bottom: 7%;
     }
 }
